Fix alignment for project wrapper

--- a/src/styles/components/_portfolio-wrapper.scss
+++ b/src/styles/components/_portfolio-wrapper.scss
@@ -1,3 +1,10 @@
+.portfolio-wrapper-container {
+  display: flex;
+  height: 80vh;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .portfolio-wrapper {
   position: relative;
 
